// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders 1`] = `
<div
  className="sc-jNxMLV cWuxBK"
  size="medium"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Loader renders with different colours 1`] = `
Array [
  <div
    className="sc-jNxMLV cWuxBK"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-jNxMLV hpqupe"
    color="dodoria.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-jNxMLV gtAGW"
    color="trunks.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-jNxMLV iZBUPC"
    color="raditz.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
]
`;

exports[`Loader renders with sizes 1`] = `
Array [
  <div
    className="sc-jNxMLV gnfPPD"
    size="twoxsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-jNxMLV fCKKzn"
    size="xsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-jNxMLV kwSaqH"
    size="small"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-jNxMLV cWuxBK"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-jNxMLV fzWCBu"
    size="large"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
]
`;
